add_executable(record-example-1 record-example-1.cpp)
target_link_libraries(record-example-1 PRIVATE Sese::Core)

add_executable(record-example-2 record-example-2.cpp)
target_link_libraries(record-example-2 PRIVATE Sese::Core)

add_executable(record-example-3 record-example-3.cpp)
target_link_libraries(record-example-3 PRIVATE Sese::Core)

add_executable(record-example-4 record-example-4.cpp)
target_link_libraries(record-example-4 PRIVATE Sese::Core)