add_executable(thread-example-1 thread-example-1.cpp)
target_link_libraries(thread-example-1 PRIVATE Sese::Core)

add_executable(thread-example-2 thread-example-2.cpp)
target_link_libraries(thread-example-2 PRIVATE Sese::Core)

add_executable(thread-example-3 thread-example-3.cpp)
target_link_libraries(thread-example-3 PRIVATE Sese::Core)

add_executable(thread-example-4 thread-example-4.cpp)
target_link_libraries(thread-example-4 PRIVATE Sese::Core)